# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tekoalynkaytto.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: config.py  database_connection.py  index.py  initialize_database.py
src/entities/: movies.py  user.py
src/repositories/: movies_repository.py  user_repository.py
src/services/: movies_service.py
src/tests/: create_new_user_test.py  login_view_test.py  movies_repository_test.py  movies_service_test.py  user_repository_test.py
src/ui/: create_new_user.py  login_view.py  movies_view.py  ui.py
