[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "onnanna"}
]
readme = "README.md"
requires-python = "^3.12"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^0.21.0"
invoke = "^2.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "pylint (>=4.0.5,<5.0.0)"
]
